# geneial

./: .gitignore  .project  .travis.yml  AUTHORS.md  CMakeLists.txt  CODING-GUIDELINES.md  Dockerfile  LICENSE.md  README.md  TODO.md  autobuild.sh  valgrind-suite.sh
src/: .cproject  .project  CMakeLists.txt  Doxyfile.in
src/CMake/: colors.cmake  use_cxx11.cmake  vars.cmake  version.cmake
src/demo/: CMakeLists.txt
src/demo/benchmark_suite/: Ackley.cpp  Ackley.h  CMakeLists.txt  Sphere.cpp  Sphere.h  benchmark_suite.cpp  main.cpp
src/demo/benchmark_suite/functions/: Ackley.cpp  Ackley.h  F10.cpp  F10.h  F5.cpp  F5.h  MultiVariableOptimProblem.h  Sphere.cpp  Sphere.h
src/demo/demo1/: CMakeLists.txt  demo1.cpp  main.cpp
src/demo/demo2/: CMakeLists.txt  demo2.cpp  main.cpp
src/demo/demo3/: CMakeLists.txt  demo3.cpp  main.cpp
src/demo/tsp_solver/: CMakeLists.txt  tsp_solver.cpp
src/lib/: CMakeLists.txt  Sources.txt  generateSources.sh
src/lib/core/config/: BaseAlgorithmParameters.cpp
src/lib/population/: Population.h
src/lib/population/chromosome/: BasicChromome.cpp  BasicChromome.h
src/lib/utility/: printable.h  random.cpp
src/src/: CMakeLists.txt
src/src/lib/: CMakeLists.txt  Config.h  Config.h.in  Sources.txt
src/src/lib/algorithm/: BaseGeneticAlgorithm.cpp  BaseGeneticAlgorithm.h  BaseGeneticAlgorithm.hpp  Manager.cpp  Manager.h
src/src/lib/algorithm/criteria/: BaseStoppingCriterion.h  FitnessDeltaCriterion.h  MaxIterationCriterion.h
src/src/lib/core/config/: BaseAlgorithmParameters.h
src/src/lib/core/fitness/: Fitness.h  Fitness.hpp  FitnessEvaluator.h
src/src/lib/core/operations/selection/: BaseSelectionOperation.h  FitnessProportionalSelection.h  FitnessProportionalSelection.hpp
src/src/lib/core/population/: Population.h  Population.hpp  PopulationSettings.h
src/src/lib/core/population/builder/: BaseChromosomeFactory.h  BuilderSettings.h  MultiIntValueChromosomeFactory.h  MultiIntValueChromosomeFactory.hpp  MultiValueBuilderSettings.h  MultiValueChromosomeFactory.h
src/src/lib/core/population/chromosome/: BaseChromosome.h  BaseChromosome.hpp  MultiValueChromosome.h  MultiValueChromosome.hpp
src/src/lib/core/population/management/: BaseManager.h  BaseManager.hpp
src/src/lib/geneial/: config.h.in  namespaces.h
src/src/lib/geneial/algorithm/: BaseGeneticAlgorithm.h  BaseGeneticAlgorithm.hpp  SteadyStateAlgorithm.h  SteadyStateAlgorithm.hpp  SteadyStateAlgorithmBuilder.hpp
src/src/lib/geneial/algorithm/criteria/: BaseStoppingCriterion.h  CombinedCriterion.h  ConsecutiveDecorator.h  FitnessDeltaCriterion.h  FitnessValueDeltaCriterion.h  FitnessValueReachedCriterion.h  FixPointCriterion.h  MaxGenerationCriterion.h  MaxIterationCriterion.h  NegationDecorator.h  PopulationUnchangedCriterion.h  StatefulStoppingCriterion.h  TrailingStopCriterion.h
src/src/lib/geneial/algorithm/diagnostics/: Diagnostics.cpp  Diagnostics.h  Diagnostics.hpp
src/src/lib/geneial/algorithm/observer/: AlgorithmObserver.h  BestChromosomeObserver.h
src/src/lib/geneial/core/fitness/: BaseFitnessProcessingStrategy.h  Fitness.h  Fitness.hpp  FitnessEvaluator.h  MultiThreadedFitnessProcessingStrategy.h  MultiThreadedFitnessProcessingStrategy.hpp  MultithreadedFitnessProcessingStrategy.h  MultithreadedFitnessProcessingStrategy.hpp  SingleThreadedFitnessProcessingStrategy.h  SingleThreadedFitnessProcessingStrategy.hpp
src/src/lib/geneial/core/operations/choosing/: BaseChoosingOperation.h  ChooseRandom.h  ChooseRandom.hpp  LambdaChoosingAdapter.h
src/src/lib/geneial/core/operations/coupling/: BaseCouplingOperation.h  BaseCouplingOperation.hpp  CouplingSettings.h  LambdaCouplingAdapter.h  RandomCouplingOperation.h  RandomCouplingOperation.hpp  SimpleCouplingOperation.h  SimpleCouplingOperation.hpp
src/src/lib/geneial/core/operations/crossover/: BaseCrossoverOperation.h  MultiValueChromosomeAverageCrossover.h  MultiValueChromosomeAverageCrossover.hpp  MultiValueChromosomeBlendingCrossover.h  MultiValueChromosomeBlendingCrossover.hpp  MultiValueChromosomeCrossoverOperation.h  MultiValueChromosomeNPointCrossover.h  MultiValueChromosomeNPointCrossover.hpp  MultiValueChromosomeNPointCrossoverSettings.h  MultiValueCrossoverLambdaAdapter.h  MultiValuePermutationCrossover.h  MultiValuePermutationCrossover.hpp  SmoothedMultiValueChromosomeNPointCrossover.h  SmoothedMultiValueChromosomeNPointCrossover.hpp
src/src/lib/geneial/core/operations/mutation/: BaseMutationOperation.h  MultiValueChromosomeMutationOperation.h  MultiValueMutationSettings.h  MutationSettings.h  NonUniformMutationOperation.h  NonUniformMutationOperation.hpp  NonUniformMutationOperator.h  SmoothPeakMutationOperation.h  SmoothPeakMutationOperation.hpp  (+4 more)
src/src/lib/geneial/core/population/: ContainerTypes.h  Population.h  Population.hpp  PopulationSettings.h
src/src/lib/geneial/utility/: Debug.cpp  Debug.h  ExecutionManager.h  Interpolators.h  Interpolators.hpp  Printable.cpp  Printable.h  Random.cpp  Random.h  Random.hpp  Smoothing.h  Smoothing.hpp  ThreadedExecutionManager.h  ThreadedExecutionManager.hpp  printable.cpp  random.cpp  random.h
src/src/lib/geneial/utility/mixins/: Buildable.h  EnableMakeShared.h  Hasher.h  Printable.cpp  Printable.h
src/src/lib/geneial/utility/patterns/: EnableMakeShared.h  singleton.hpp
src/src/lib/population/: Population.cpp  Population.h
src/src/lib/population/chromosome/: BasicChromosome.cpp  BasicChromosome.h
src/src/lib/utility/: printable.cpp  random.cpp  random.h
src/src/lib/utility/patterns/: singleton.hpp
src/src/tests/: CMakeLists.txt
src/src/tests/suites/: choosing_test.cpp  chromosome_test.cpp  continous_mvc.cpp  continous_mvc_test.cpp  coupling_test.cpp  criteria_test.cpp  crossover_test.cpp  instanciation_test.cpp  mutation_test.cpp  mutation_test_bad.cpp  random_test.cpp
src/src/tests/suites/helper/: chromosome_compare.h  common_casts.h  continuity.h
src/src/tests/suites/mocks/: MockFitnessEvaluator.h  MockMultivalueChromosome.h
src/src/tests/test_bin/: random_test
src/tests/: CMakeLists.txt
src/tests/suites/: random_test.cpp
(+49 files in other folders)
